--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,4 +29,8 @@
 	</mat-toolbar>
 
 	<router-outlet></router-outlet>
+
+	<div *appShellRender class="spinner-container">
+		<mat-spinner></mat-spinner>
+	</div>
 </mat-sidenav-container>
