--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -7,7 +7,7 @@
 		<mat-spinner></mat-spinner>
 	</div>
 
-	<mat-table class="lessons-table mat-elevation-z8" [dataSource]="dataSource">
+	<mat-table *appShellNoRender class="lessons-table mat-elevation-z8" [dataSource]="dataSource">
 		<ng-container matColumnDef="seqNo">
 			<mat-header-cell *matHeaderCellDef>#</mat-header-cell>
 
